--- a/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
@@ -1,8 +1,6 @@
 .change-down-distance-text-input {
-  grid-row: span 2;
-  font-size: 25px; /* Adjust the font size as needed */
   text-align: center; /* Adjust the text alignment as needed */
-  width: 100%;
+  //width: 100%;
 }
 
 .down-selector {
