refactoring admin forms down and distance

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -5,7 +5,7 @@
     <button
       appearance="icon"
       tuiButton
-      size="l"
+      size="m"
       type="button"
       (click)="toggleAllFormsVisibility()"
       [icon]="(showHideAllButtonVisible$ | async) ? 'tuiIconEyeOff' : 'tuiIconEye'"
