--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
@@ -67,8 +67,12 @@
     grid-template-columns: auto
   }
 
-  .score-increment-buttons,
+
   .score-increment {
+    grid-template-columns: auto auto;
+  }
+
+  .score-increment-buttons {
     grid-template-columns: auto;
   }
 
