--- a/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/down-distance-forms/down-distance-forms.component.less
@@ -9,6 +9,7 @@
   align-content: center;
   justify-content: stretch;
   grid-gap: 5px;
+
 }
 
 .down-selector-distance {
@@ -19,11 +20,14 @@
 }
 
 .down-and-distance {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
+
+  box-shadow: 0px 0px 10px 0px #232323;
+  border-radius: 5px;
 
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
 
   padding: 10px;
   grid-gap: 10px;
@@ -33,37 +37,37 @@
 }
 
 .change-down-distance-text {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
 
-  grid-column: span 2;
+  //grid-column: span 2;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto;
   grid-template-rows: auto auto;
 
   padding: 10px;
   grid-gap: 10px;
 
   align-content: center;
-  justify-content: center;
+  justify-content: stretch;
 }
 
 .down-distance-selector {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
 
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
 
   padding: 10px;
   grid-gap: 10px;
 
   align-content: center;
-  justify-content: center;
+  justify-content: stretch;
 }
 
 
 .down-dist-selector-form {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
 
   display: grid;
   grid-template-columns: auto auto auto;
@@ -73,15 +77,23 @@
   grid-gap: 10px;
 
   align-content: center;
-  justify-content: center;
+  justify-content: stretch;
 }
 
-.down-dist-selector-label {
-  grid-column: span 3;
-  justify-self: center;
+.down-dist-selector-game,
+.down-dist-selector-conv,
+.down-dist-selector-kick {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+
+  grid-gap: 10px;
+
+  align-content: center;
+  justify-content: stretch;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 720px) {
   .down-and-distance {
     border: 1px solid #000000;
 
@@ -107,8 +119,6 @@
     padding: 10px;
     grid-gap: 10px;
 
-    align-content: center;
-    justify-content: center;
   }
 
 }
