refactoring admin forms timeouts

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -38,6 +38,7 @@
   <app-timeout-forms
     [data]="data"
     [timeoutBtnsVisible$]="timeoutBtnsVisible$"
+    [disabled]="(isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!"
   ></app-timeout-forms>
 
   <app-time-forms
