--- a/src/app/shared/scoreboards/admin-forms/timeout-forms/timeout-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/timeout-forms/timeout-forms.component.less
@@ -1,20 +1,22 @@
 
 .timeouts-btns {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
+
 
   display: grid;
   grid-template-columns: auto auto;
 
-  padding: 10px;
+  //padding: 10px;
   grid-gap: 10px;
 
   align-content: center;
   justify-content: stretch;
 }
 
-.to-t1-selector-form,
-.to-t2-selector-form {
-  border: 1px solid #000000;
+.to-selector-form {
+  //border: 1px solid #000000;
+  box-shadow: 0px 0px 10px 0px #232323;
+  border-radius: 5px;
 
   display: grid;
   grid-template-columns: auto auto auto auto;
@@ -24,17 +26,11 @@
   grid-gap: 10px;
 
   align-content: center;
-  justify-content: center;
+  justify-content: stretch;
 }
 
-.to-t1-selector-form-label,
-.to-t2-selector-form-label {
-  grid-column: span 4;
-  justify-self: center;
 
-}
-
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 720px) {
   .timeouts-btns {
     border: 1px solid #000000;
 
