--- a/src/styles.less
+++ b/src/styles.less
@@ -223,8 +223,8 @@ aside > * {
 
 // This goes into global, non-encapsulated styles
 [tuiWrapper][data-appearance='submit-admin'] {
-  background: #479569;
-  color: #fff;
+  background: #b6d0c0;
+  color: #282828;
 
   .wrapper-hover({
     background: var(--tui-positive-hover);;
