--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -44,6 +44,7 @@
   <app-time-forms
     [data]="data"
     [timeFormsVisible$]="timeFormsVisible$"
+    [disabled]="(isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!"
   ></app-time-forms>
 
   <app-change-teams-forms
