--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
@@ -4,76 +4,118 @@
   id="timers-form"
   class="timers-form"
 >
-  <div class="game-timer" id="game-timer">
-    <label class="game-timer-min-label">
-      Minutes:
-    </label>
-    <label class="game-timer-sec-label">
-      Seconds:
-    </label>
-    <button
-      class="game-timer-save-btn"
-      (click)="saveNewGameClock(data.match_data!, GameTimeMinutes.value, GameTimeSeconds.value)"
-    >Save New Time
-    </button>
-    <input
-      type="number"
-      id="set-minutes"
-      min="0"
-      class="game-timer-min-input"
-      [disabled]="data.match_data?.gameclock_status == 'running'"
-      [value]="getMinutes(data.match_data!.gameclock!)"
-      [placeholder]="getMinutes(data.match_data!.gameclock!)"
-      #GameTimeMinutes
+  <div class="game-timer">
+    <!--    <label class="game-timer-min-label">-->
+    <!--      Minutes:-->
+    <!--    </label>-->
+    <!--    <label class="game-timer-sec-label">-->
+    <!--      Seconds:-->
+    <!--    </label>-->
+    <!--    <button-->
+    <!--      class="game-timer-save-btn"-->
+    <!--      (click)="saveNewGameClock(data.match_data!, GameTimeMinutes.value, GameTimeSeconds.value)"-->
+    <!--    >Save New Time-->
+    <!--    </button>-->
+    <app-admin-submit-button
+      [disabled]="disabled || this.data.match_data?.gameclock_status === 'running'"
+      (click)="saveNewGameClock(data.match_data!)"
+    ></app-admin-submit-button>
+    <form
+      class="score-form"
+      [formGroup]="timeForm"
     >
-    <input
-      type="number"
-      id="set-seconds"
-      min="0"
-      max="59"
-      class="game-timer-sec-input"
-      [disabled]="data.match_data?.gameclock_status == 'running'"
-      [value]="getSeconds(data.match_data?.gameclock!)"
-      [placeholder]="getSeconds(data.match_data?.gameclock!)"
-      #GameTimeSeconds
+      <tui-input-number
+        formControlName="gameTimeMinutes"
+      > Game Time Minutes:
+      </tui-input-number>
+      <tui-error
+        formControlName="gameTimeMinutes"
+        [error]="[] | tuiFieldError | async"
+      ></tui-error>
+
+      <tui-input-number
+        formControlName="gameTimeSeconds"
+      > Game Time Seconds:
+      </tui-input-number>
+      <tui-error
+        formControlName="gameTimeSeconds"
+        [error]="[] | tuiFieldError | async"
+      ></tui-error>
+
+      <button
+
+        (click)="startGameClock()"
+      >Start Game Timer
+      </button>
+      <button
+
+        (click)="pauseGameClock()"
+      >Pause Game Timer
+      </button>
+      <button
+
+        (click)="resetGameClock()"
+      >Reset Game Timer
+      </button>
+
+    </form>
+
+    <!--    <input-->
+    <!--      type="number"-->
+    <!--      id="set-minutes"-->
+    <!--      min="0"-->
+    <!--      class="game-timer-min-input"-->
+    <!--      [disabled]="data.match_data?.gameclock_status == 'running'"-->
+    <!--      [value]="getMinutes(data.match_data!.gameclock!)"-->
+    <!--      [placeholder]="getMinutes(data.match_data!.gameclock!)"-->
+    <!--      #GameTimeMinutes-->
+    <!--    >-->
+    <!--    <input-->
+    <!--      type="number"-->
+    <!--      id="set-seconds"-->
+    <!--      min="0"-->
+    <!--      max="59"-->
+    <!--      class="game-timer-sec-input"-->
+    <!--      [disabled]="data.match_data?.gameclock_status == 'running'"-->
+    <!--      [value]="getSeconds(data.match_data?.gameclock!)"-->
+    <!--      [placeholder]="getSeconds(data.match_data?.gameclock!)"-->
+    <!--      #GameTimeSeconds-->
+    <!--    >-->
+
+
+    <form
+      class="score-form"
+      [formGroup]="timeForm"
     >
-    <button
-      class="game-timer-start-btn"
-      (click)="startGameClock()"
-    >Start Game Timer
-    </button>
-    <button
-      class="game-timer-pause-btn"
-      (click)="pauseGameClock()"
-    >Pause Game Timer
-    </button>
-    <button
-      class="game-timer-reset-btn"
-      (click)="resetGameClock()"
-    >Reset Game Timer
-    </button>
-    <div class="play-timer" id="play-timer">
-          <span
-            class="play-timer-display"
-            id="play-timer-display"
-          >{{ getPlayClockSeconds(data.match_data?.playclock!) }}</span>
-    </div>
-    <div class="displayed-play-time" id="displayed-play-time"></div>
-    <button
-      class="play-timer-reset-btn"
-      (click)="resetPlayClock()"
-    >Reset Play Timer
-    </button>
-    <button
-      class="play-timer-40-btn"
-      (click)="startPlayClock(40)"
-    >Start 40
-    </button>
-    <button
-      class="play-timer-25-btn"
-      (click)="startPlayClock(3)"
-    >Start 25
-    </button>
+      <tui-input
+        formControlName="playTimeSeconds"
+      >Play Time
+      </tui-input>
+
+
+      <!--    <div class="play-timer" id="play-timer">-->
+      <!--          <span-->
+      <!--            class="play-timer-display"-->
+      <!--            id="play-timer-display"-->
+      <!--          >{{ getPlayClockSeconds(data.match_data?.playclock!) }}</span>-->
+      <!--    </div>-->
+      <!--    <div class="displayed-play-time" id="displayed-play-time"></div>-->
+      <button
+        class="play-timer-reset-btn"
+        (click)="resetPlayClock()"
+      >Reset Play Timer
+      </button>
+      <button
+        class="play-timer-40-btn"
+        (click)="startPlayClock(40)"
+      >Start 40
+      </button>
+      <button
+        class="play-timer-25-btn"
+        (click)="startPlayClock(3)"
+      >Start 25
+      </button>
+    </form>
   </div>
 </div>
 <app-toggle-visible-button
