refactoring admin forms time

--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.less
@@ -92,3 +92,10 @@
   justify-content: stretch;
 }
 
+@media screen and (max-width: 720px) {
+  .timers-form {
+    grid-template-columns: auto;
+  }
+
+
+}
