--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
@@ -31,13 +31,13 @@
     </div>
 
     <app-admin-down-button
-      [down]="'Start Game Clock'"
+      [down]="'Start Clock'"
       (click)="startGameClock()"
       [disabled]="disabled || this.data.match_data?.gameclock_status === 'running'"
     ></app-admin-down-button>
 
     <app-admin-down-button
-      [down]="'Pause Game Clock'"
+      [down]="'Pause Clock'"
       (click)="pauseGameClock()"
       [disabled]="
       disabled
@@ -46,25 +46,10 @@
     ></app-admin-down-button>
 
     <app-admin-down-button
-      [down]="'Reset Game Clock'"
+      [down]="'Reset Clock'"
       (click)="resetGameClock()"
       [disabled]="disabled"
     ></app-admin-down-button>
-
-    <!--    <button-->
-    <!--      (click)="startGameClock()"-->
-    <!--    >Start Game Timer-->
-    <!--    </button>-->
-
-    <!--    <button-->
-    <!--      (click)="pauseGameClock()"-->
-    <!--    >Pause Game Timer-->
-    <!--    </button>-->
-
-    <!--    <button-->
-    <!--      (click)="resetGameClock()"-->
-    <!--    >Reset Game Timer-->
-    <!--    </button>-->
 
   </form>
 
@@ -100,18 +85,6 @@
       ></app-admin-down-button>
     </div>
 
-    <!--    <button-->
-    <!--      (click)="resetPlayClock()"-->
-    <!--    >Reset Play Timer-->
-    <!--    </button>-->
-    <!--    <button-->
-    <!--      (click)="startPlayClock(40)"-->
-    <!--    >Start 40-->
-    <!--    </button>-->
-    <!--    <button-->
-    <!--      (click)="startPlayClock(3)"-->
-    <!--    >Start 25-->
-    <!--    </button>-->
   </form>
 </div>
 
